--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: assets/img/avatar.png
+avatar: https://avatars.githubusercontent.com/u/88709160?v=4
 
 # boolean type, the global switch for ToC in posts.
 toc: true
