--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ github:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Josh
+  name: Josh Huang
   email: joshluffy99@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
@@ -83,14 +83,15 @@ avatar: https://avatars.githubusercontent.com/u/88709160?v=4
 toc: true
 
 comments:
-  active: disqus # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: utterances # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
   # utterances settings › https://utteranc.es/
   utterances:
-    repo: # <gh-username>/<repo>
-    issue_term: # < url | pathname | title | ...>
+    repo: cooljosh0221/cooljosh0221.github.io # <gh-username>/<repo>
+    issue_term: https://github.com/CoolJosh0221/cooljosh0221.github.io # < url | pathname | title | ...>
+    theme: gruvbox-dark
   # Giscus options › https://giscus.app
   giscus:
     repo: # <gh-username>/<repo>
